# ray-marching

./: .gitignore  CMakeLists.txt  PerlinNoise.cu  PerlinNoise.cuh  README.md  box.cuh  camera.cuh  cloud.cu  cloud.cuh  common.cuh  csgObject.cuh  diffuse.cu  diffuse.cuh  hit_record.cuh  light.cuh  main.cu  material.cuh  ray.cuh  scene.cu  scene.cuh  sphere.cuh  surface1.cuh  test.cu  vec3.cuh
report/: ray-marching.tex  sample-authordraft.tex  sample-base.bib
src/: PerlinNoise.cpp  PerlinNoise.h  box.h  camera.h  cloud.cpp  cloud.h  common.h  csgObject.h  cylinder.h  diffuse.cpp  diffuse.h  hit_record.h  light.h  main.cpp  mandelbulb.h  material.h  pyramid.h  ray.h  scene.cpp  scene.h  sphere.h  surface.h  triPrism.h  vec2.h  vec3.h
